# aiwrite

./: .gitignore  Dockerfile  README.md  app.py  compose.yml  main.py  pyproject.toml  requirements.txt
.run/: Dockerfile.run.xml
Docker/: entrypoint.sh
aiwrite/: main.py  workflow.py
aiwrite/gradgui/: app.py
aiwrite/gradgui/locales/: en.json  pt.json
libbygui/: main.py  workflow.py
tests/: test_workflow.py
tests/fixtures/: test_manuscript.md
