[tool.poetry]
name = "aiwrite"
version = "0.2.0"
description = ""
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
readme = "README.md"
packages = [
    { include = "aiwrite", from = "." }
]

[tool.poetry.scripts]
aiwrite = "aiwrite.main:run"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
flet = ">=0.25.2"
libby = {git = "https://github.com/Deeplearn-PeD/libby"}
sqlmodel = ">=0.0.18"
python-dotenv = "^1.0.1"
gradio = "^5.38.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
