[project]
name = "aiwrite"
version = "0.4.0"
description = "AI Writing Assistant"
authors = [{ name = "Flávio Codeço Coelho", email = "fccoelho@gmail.com" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "flet>=0.25.2",
    "libby",
    "sqlmodel>=0.0.18",
    "python-dotenv>=1.0.1,<2",
    "gradio>=5.38.2,<6",
    "loguru>=0.7.3,<0.8",
    "pillow>=11.3.0,<12",
]

[project.scripts]
aiwrite = "aiwrite.main:run"

[tool.uv]
package = true

[tool.uv.sources]
libby = { git = "https://github.com/Deeplearn-PeD/libby", branch = "main" }

[tool.hatch.build.targets.sdist]
include = ["aiwrite"]

[tool.hatch.build.targets.wheel]
include = ["aiwrite"]

[tool.hatch.build.targets.wheel.sources]
"./aiwrite" = "aiwrite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
